@@ -23,6 +23,10 @@ Michael Voigt
   Jackdmp changes log
 ---------------------------
 
+2009-02-17 Stephane Letz  <letz@grame.fr>
+
+	* Fix the mutex/signal classes on Windows.
+
 2009-02-16 Stephane Letz  <letz@grame.fr>
 
 	* Rework the mutex/signal classes. Use them in JackMessageBuffer.
@@ -30,7 +34,7 @@ Michael Voigt
 2009-02-11 Stephane Letz  <letz@grame.fr>
 
 	* Merge Solaris branch back on trunk.
-        * Equality of input and output buffer size removed (for now) in JackOSSDriver.
+      * Equality of input and output buffer size removed (for now) in JackOSSDriver.
 
 2009-02-10 Stephane Letz  <letz@grame.fr>
 
